code improvements, clippy & fmt in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ cache: cargo
 script:
   - cargo build
   - cargo test
+  - rustup component add rustfmt
+  - rustup component add clippy
+  - cargo fmt -- --check
+  - cargo clippy
+
 
