--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 name = "runs_inside_qemu"
 description = """
 Small no_std-lib that checks if the binary is running inside a QEMU virtual machine.
-Only works on x86/x86_64 platform.
+Only works on x86/x86_64 platforms.
 """
-version = "1.0.2"
+version = "1.0.3"
 edition = "2018"
 exclude = [
     ".travis.yml"
