Notice that the crate only builds with nightly

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
+          # - stable
           - nightly
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +24,8 @@ jobs:
     strategy:
       matrix:
         rust:
-          - stable
+          # - stable
+          - nightly
     steps:
       - uses: actions/checkout@v2
       - name: Rustfmt
